modificacines en resp mobile y seccion nosotros

--- a/contacto.html
+++ b/contacto.html
@@ -19,8 +19,8 @@
         <!--menu de navegacion-->
             <ul class="header__menu">
                 <div class="header__logo"><a href="index.html">INNOVATEJIDOS</a></div>
-                <li><a href="index.html">inicio</a></li>
-                <li><a href="catalogo.html">catalogo </a>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="catalogo.html">Catálogo </a>
                     <ul class="header__submenu">
                         <li><a href="/htdocs/catalogo.html#ruanas">Ruanas</a></li>
                         <li><a href="/htdocs/catalogo.html#ponchos">Ponchos</a></li>
@@ -28,9 +28,9 @@
                         <li><a href="/htdocs/catalogo.html#sacos">Sacos</a></li>
                     </ul>  
                 </li>
-                <li><a href="tips.html">tips</a></li>
-                <li><a href="nosotros.html">nosotros </a></li>
-                <li><a href="contacto.html">contacto </a></li>
+                <li><a href="tips.html">Tips</a></li>
+                <li><a href="nosotros.html">Nosotros </a></li>
+                <li><a href="contacto.html">Contacto </a></li>
             </ul>
         </nav>
 
