--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                <!--aqui va el logo-->
               <div class="header__logo"><a href="index.html">INNOVATEJIDOS</a></div>
               <li><a href="index.html">Inicio</a></li>
-              <li><a href="catalogo.html">Catalogo </a>
+              <li><a href="catalogo.html">Catálogo </a>
                 <ul class="header__submenu">
                   <li><a href="/htdocs/catalogo.html#ruanas">Ruanas</a></li>
                   <li><a href="/htdocs/catalogo.html#ponchos">Ponchos</a></li>
