--- a/catalogo.html
+++ b/catalogo.html
@@ -20,8 +20,8 @@
           <!--menu de navegacion-->
           <ul class="header__menu">
             <div class="header__logo"><a href="index.html">INNOVATEJIDOS</a></div>
-            <li><a href="index.html">inicio</a></li>
-            <li><a href="catalogo.html">catalogo </a>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="catalogo.html">Catálogo </a>
               <ul class="header__submenu">
                 <li><a href="#ruanas">Ruanas</a></li>
                 <li><a href="#ponchos">Ponchos</a></li>
@@ -30,8 +30,8 @@
               </ul>  
             </li>
             <li><a href="tips.html">Tips </a></li>
-            <li><a href="nosotros.html">nosotros </a></li>
-            <li><a href="contacto.html">contacto </a></li>
+            <li><a href="nosotros.html">Nosotros </a></li>
+            <li><a href="contacto.html">Contacto </a></li>
           </ul>
       </nav>
 
