--- a/contacto.html
+++ b/contacto.html
@@ -8,8 +8,9 @@
     <meta name="keywords"  content="TEJIDOS, MOHAIR, MODA, ARTESANAL">
     <link rel="icon" href="imagenes/favicon-16x16.png" type="image/png">
     <title>Contacto</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="contacto" >
@@ -22,8 +23,8 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="catalogo.html">Catálogo </a>
                     <ul class="header__submenu">
+                        <li><a href="/htdocs/catalogo.html#polerones">Poleron</a></li>
                         <li><a href="/htdocs/catalogo.html#ruanas">Ruanas</a></li>
-                        <li><a href="/htdocs/catalogo.html#ponchos">Ponchos</a></li>
                         <li><a href="/htdocs/catalogo.html#sweters">Sweters</a></li>
                         <li><a href="/htdocs/catalogo.html#sacos">Sacos</a></li>
                     </ul>  
@@ -34,11 +35,12 @@
             </ul>
         </nav>
 
-        <h1 class="espacio">DEJANOS TU CONSULTA</h1>
+        <h1 class="espacio"data-aos="fade-right" >DEJANOS TU CONSULTA</h1>
     </header>
 
 
-        <form>
+        <form data-aos="fade-up"
+        data-aos-duration="3000" >
     
             <label for="texto">Nombre</label>
             <input type="text" placeholder="" value="" required>
@@ -112,5 +114,10 @@
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
+
 </body>
 </html>
