--- a/nosotros.html
+++ b/nosotros.html
@@ -86,14 +86,14 @@
 
         <aside class="sidebar">
             <div>
-                <img src="imagenes/conos.png" alt="conos de coloresw" >
+                <img src="imagenes/conos.png" alt="conos-de-colores" >
                     <div class="espacioNormal">
                         <p>Contamos con una variedad de hilados exclusivos que es cada día más amplia,donde podrás elegir entre una variedad inmensa de colores </p>
                     </div>   
                 </article>
         
             <div>
-                <img class="espacioEntreImg" src="imagenes/hilado.png" alt="hilado industrial" >
+                <img class="espacioEntreImg" src="imagenes/hilado.png" alt="hilado-industrial" >
                     <div class="espacioNormal">
                         <p>Argentina es uno de los mayores productores de lana mohair, su calidad es reconocida mundialmente y esta fibra es la base de nuestras prendas en las colecciones de invierno.</p>
                     </div>
