--- a/tips.html
+++ b/tips.html
@@ -66,19 +66,19 @@
         </div>
 
         <div class="padre"> 
-            <img src="imagenes/tips 1.png" class="img-thumbnail" alt="..."data-aos="flip-left"
+            <img src="imagenes/tips 1.png" class="img-thumbnail" alt="imagen-tip1"data-aos="flip-left"
             data-aos-easing="ease-out-cubic"
             data-aos-duration="2000" >
-            <img src="imagenes/tips 2.png" class="img-thumbnail" alt="..." data-aos="flip-left"
+            <img src="imagenes/tips 2.png" class="img-thumbnail" alt="imagen-tip2" data-aos="flip-left"
             data-aos-easing="ease-out-cubic"
             data-aos-duration="2000">
-            <img src="imagenes/tips 3.png" class="img-thumbnail" alt="..."data-aos="flip-left"
+            <img src="imagenes/tips 3.png" class="img-thumbnail" alt="imagen-tip3"data-aos="flip-left"
             data-aos-easing="ease-out-cubic"
             data-aos-duration="2000">
-            <img src="imagenes/tips 4.png" class="img-thumbnail" alt="..."data-aos="flip-left"
+            <img src="imagenes/tips 4.png" class="img-thumbnail" alt="imagen-tip4"data-aos="flip-left"
             data-aos-easing="ease-out-cubic"
             data-aos-duration="2000">
-            <img src="imagenes/tips 5.png" class="img-thumbnail" alt="..."data-aos="flip-left"
+            <img src="imagenes/tips 5.png" class="img-thumbnail" alt="imagen-tip5"data-aos="flip-left"
             data-aos-easing="ease-out-cubic"
             data-aos-duration="2000">
         </div>
