--- a/catalogo.html
+++ b/catalogo.html
@@ -16,24 +16,26 @@
 <body class="body__catalogo">
 
   <header class="header">
-      <nav class="header__navegacion">
-          <!--menu de navegacion-->
-          <ul class="header__menu">
-            <div class="header__logo"><a href="index.html">INNOVATEJIDOS</a></div>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="catalogo.html">Catálogo </a>
-              <ul class="header__submenu">
-                <li><a href="#polerones">Poleron</a></li>
-                <li><a href="#ruanas">Ruanas</a></li>
-                <li><a href="#sweters">Sweters</a></li>
-                <li><a href="#sacos">Sacos</a></li>
-              </ul>  
-            </li>
-            <li><a href="tips.html">Tips </a></li>
-            <li><a href="nosotros.html">Nosotros </a></li>
-            <li><a href="contacto.html">Contacto </a></li>
-          </ul>
-      </nav>
+    <nav class="header__navegacion">
+          
+      <!--menu de navegacion-->
+      <ul class="header__menu">
+         <!--aqui va el logo-->
+        <div class="header__logo"><a href="index.html">INNOVATEJIDOS</a></div>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="catalogo.html">Catálogo </a>
+          <ul class="header__submenu">
+            <li><a href="/htdocs/catalogo.html#polerones">Poleron</a></li>
+            <li><a href="/htdocs/catalogo.html#ruanas">Ruanas</a></li>
+            <li><a href="/htdocs/catalogo.html#sweters">Sweters</a></li>
+            <li><a href="/htdocs/catalogo.html#sacos">Sacos</a></li>
+          </ul>  
+        </li>
+        <li><a href="tips.html">Tips </a></li>
+        <li><a href="nosotros.html">Nosotros </a></li>
+        <li><a href="contacto.html">Contacto </a></li>
+      </ul>
+  </nav>
 
       <h1 data-aos="fade-zoom-in"
      data-aos-easing="ease-in-back"
