--- a/tips.html
+++ b/tips.html
@@ -23,10 +23,10 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="catalogo.html">Catálogo </a>
                     <ul class="header__submenu">
-                        <li><a href="/htdocs/catalogo.html#polerones">Poleron</a></li>
-                        <li><a href="/htdocs/catalogo.html#ruanas">Ruanas</a></li>
-                        <li><a href="/htdocs/catalogo.html#sweters">Sweters</a></li>
-                        <li><a href="/htdocs/catalogo.html#sacos">Sacos</a></li>
+                        <li><a href="./catalogo.html#polerones">Poleron</a></li>
+                        <li><a href="./catalogo.html#ruanas">Ruanas</a></li>
+                        <li><a href="./catalogo.html#sweters">Sweters</a></li>
+                        <li><a href="./catalogo.html#sacos">Sacos</a></li>
                     </ul>  
                 </li>
               <!--clase para unir la frase que no quede espaciada-->
