--- a/catalogo.html
+++ b/catalogo.html
@@ -25,10 +25,10 @@
         <li><a href="index.html">Inicio</a></li>
         <li><a href="catalogo.html">Catálogo </a>
           <ul class="header__submenu">
-            <li><a href="/htdocs/catalogo.html#polerones">Poleron</a></li>
-            <li><a href="/htdocs/catalogo.html#ruanas">Ruanas</a></li>
-            <li><a href="/htdocs/catalogo.html#sweters">Sweters</a></li>
-            <li><a href="/htdocs/catalogo.html#sacos">Sacos</a></li>
+            <li><a href="#polerones">Poleron</a></li>
+            <li><a href="#ruanas">Ruanas</a></li>
+            <li><a href="#sweters">Sweters</a></li>
+            <li><a href="#sacos">Sacos</a></li>
           </ul>  
         </li>
         <li><a href="tips.html">Tips </a></li>
